# solar-power-forecast

./: .gitignore  Dockerfile  README.md  pyproject.toml
.dvc/: config
.github/workflows/: data-pipeline.yml  docker-pipeline.yml  metrics-pipeline.yml  prediction-pipeline.yml  service-ci.yml  train-pipeline.yml
data/: .gitignore  processed.dvc  validation.dvc
data/raw/: .gitignore  fetched.dvc  historical.dvc
gx/: great_expectations.yml
gx/checkpoints/: data_checkpoint.yml
gx/expectations/: .ge_store_backend_id  data_suite.json
src/apps/api/: Dockerfile  main.py
src/apps/api/config/: database.py
src/apps/api/models/: production_history.py
src/apps/api/routers/: health.py  predictions.py  production.py
src/apps/api/services/: predictions.py  production.py
src/apps/api/tests/: app_test.py
src/apps/api/utils/: utils.py
src/apps/client/: package-lock.json  package.json  tailwind.config.ts
src/apps/client/src/: env.mjs  utils.ts
src/apps/client/src/app/: globals.css  layout.tsx  page.tsx
src/apps/client/src/components/ui/: power-card.tsx  section.tsx
src/apps/client/src/lib/api/: axios.ts  history-service.ts  prediction-service.ts
src/apps/client/src/lib/hooks/: key-factories.ts  use-history.tsx  use-prediction-history.tsx  use-predictions.ts
src/apps/client/src/lib/types/: history.ts  prediction.ts
src/apps/model_management_api/: Dockerfile  main.py
src/apps/model_management_api/config/: pusher.py
src/apps/model_management_api/models/: predictions.py
src/apps/model_management_api/routers/: models.py
src/apps/model_management_api/services/: models.py
src/apps/model_management_api/utils/: load_data.py
src/apps/model_management_client/: package-lock.json  package.json
src/apps/model_management_client/src/: env.mjs
src/apps/model_management_client/src/app/: globals.css  layout.tsx  page.tsx
src/apps/model_management_client/src/app/models/[id]/: page.tsx
src/apps/model_management_client/src/components/providers/: query-client-provider.tsx
src/apps/model_management_client/src/components/ui/: custom-modal.tsx  data-table-columns.tsx  data-table.tsx
src/apps/model_management_client/src/lib/: utils.ts
src/apps/model_management_client/src/lib/api/: axios.ts  models-service.ts
src/apps/model_management_client/src/lib/hooks/: key-factories.ts  use-event-dispatcher.ts  use-model-train.tsx  use-model.tsx  use-models.tsx  use-move-model-to-production.tsx
src/apps/model_management_client/src/lib/types/: models.ts
src/config/: column_names_serializer.py  constants.py  settings.py
src/data/: data_coverter.py  data_saver.py  solar_production_fetcher.py  time_fetcher.py  weather_fetcher.py
src/data/models/: production.py  weather.py
src/data/scripts/: fetch_solar_power_data.py  fetch_weather_data.py  merge_historical_data.py  process_data.py  process_historical_data.py  select_features.py
src/models/: mlflow_config.py  model.py  model_analysis.py  model_data_preparation.py  model_registry.py
src/models/common/: mlflow_config.py  model.py  model_analysis.py  model_evaluation.py  model_registry.py
src/models/common/scripts/: evaluate_power_production_model.py  evaluate_solar_radiation_model.py  model_analysis.py  predict_power_production.py  train_power_production_model.py  train_solar_radiation_model.py
src/models/power_production_model/: evaluate.py  model.py  prepare_data.py
src/models/scripts/: evaluate_model.py  model_analysis.py  train_model.py  train_power_production_model.py
src/models/solar_radiation_model/: evaluate.py  model.py  prepare_data.py
src/validation/: cleanup.py  drift.py  gx.py  preparation.py  stability.py
tests/: api_tests.py
