[tool.poetry]
name = "solar-power-forecast"
version = "0.1.0"
description = ""
authors = ["Matevz <semprimoznik.matevz@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
fetch-weather-data = "python -m src.data.scripts.fetch_weather_data"
fetch-power-plant-data = "python -m src.data.scripts.fetch_solar_power_data"
merge-historical-data = "python -m src.data.scripts.merge_historical_data"
process-historical-data = "python -m src.data.scripts.process_historical_data"
process-data = "python -m src.data.scripts.process_data"
select-features = "python -m src.data.scripts.select_features"
train-power-production-model = "python -m src.models.common.scripts.train_power_production_model"
train-solar-radiation-model = "python -m src.models.common.scripts.train_solar_radiation_model"
mlflow-config = "python -m src.models.common.mlflow_config"
model-analysis = 'python -m src.models.common.scripts.model_analysis'
evaluate-power-production-model = "python -m src.models.common.scripts.evaluate_power_production_model"
evaluate-solar-radiation-model = "python -m src.models.common.scripts.evaluate_solar_radiation_model"
test-data-api = "pytest tests/api_tests.py"
data-gx-test = "python -m src.validation.gx"
data-stability-test = "python -m src.validation.stability"
data-drift-test = "python -m src.validation.drift"
validation-preparation = "python -m src.validation.preparation"
validation-cleanup = "python -m src.validation.cleanup"
data-tests = ["validation-preparation", "data-gx-test", "data-stability-test", "data-drift-test", "validation-cleanup"]
start-api = "uvicorn src.apps.api.main:app --reload"
start-model-management-api = "uvicorn src.apps.model_management_api.main:app --reload --port 5000"
predict-power-production = "python -m src.models.common.scripts.predict_power_production"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
fastapi = "^0.111.0"
tensorflow = "^2.16.1"
keras = "^3.3.3"
xgboost = "^2.0.3"
uvicorn = "^0.29.0"
pydantic-settings = "2.2.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
mlflow = "^2.13.0"
dagshub = "^0.3.27"
tf2onnx = "^1.16.1"
onnxruntime = "^1.18.0"
pymongo = "^4.7.2"
onnxmltools = "^1.12.0"
skl2onnx = "^1.16.0"
great-expectations = "^0.18.16"
evidently = "^0.4.25"
shap = "^0.45.1"
pusher = "^3.3.2"
dvc-s3 = "^3.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
poethepoet = "^0.26.1"
pytest = "^8.2.1"
ruff = "^0.4.5"
black = "^24.4.2"


[tool.poetry.group.dev-win.dependencies]
tensorflow-intel = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
